--- a/ilab/.classpath
+++ b/ilab/.classpath
@@ -33,5 +33,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/roy/librerias/primefaces-5.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
