--- a/ilab/pom.xml
+++ b/ilab/pom.xml
@@ -59,6 +59,11 @@
       <artifactId>jboss-jsf-api_2.1_spec</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+    <groupId>net.glxn</groupId>
+    <artifactId>qrgen</artifactId>
+    <version>1.4</version>
+</dependency>
   </dependencies>
   <build>
     <finalName>ilab</finalName>
